wayland: Avoid MetaWindow call on non window-backed surfaces

Crossing events may also be gotten on subsurfaces.

https://bugzilla.gnome.org/show_bug.cgi?id=738890